# on_render_template_mySite

./: .gitignore  build.sh  pyproject.toml  requirements.txt
mysite/: settings.py  urls.py  wsgi.py
render/: forms.py  models.py  urls.py  views.py
render/components/: task_dynamic_v2.py
render/migrations/: 0001_initial.py
render/static/js/: script.js
render/templates/render/: index.html
render/templates/unicorn/: task-dynamic-v2.html
staticfiles/css/: style_messages_error.css  style_messages_error.css.br
staticfiles/js/: script.js.br
staticfiles/unicorn/js/: component.js.br  element.js.br  eventListeners.js.br  messageSender.js.br  unicorn.js.br  unicorn.min.js.br  utils.js.br
staticfiles/unicorn/js/morphdom/2.6.1/: options.js.br
