[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Rip4568 <63131796+Rip4568@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.4"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"
django-unicorn = "^0.48.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
